array.island.Island.scala.error
Compilation error:
Island:8: error: ')' expected but '}' found.
  }
  ^