array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte: Int = 0
  for (rg <- 1 to num.length) {
    if (num(rg) < num(rg-1) {
      compte= compte+1
    }
  }
  return compte
}